# SynaWeave-ce

./: .basedpyright-baseline.json  .betterleaks.toml  .env.example  .gitignore  .pr_agent.toml  AGENTS.md  CLA.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  NOTICE  README.md  ROLLOUT_NOTES.md  SECURITY.md  TRADEMARKS.md  package.json  playwright.config.ts  pyproject.toml  renovate.json  requirements-app.txt  requirements-dev.txt  tsconfig.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: cla-check.yml  codeql.yml  dependency-installability.yml  dependency-review.yml  deploy-web-pages.yml  docs-guard.yml  governance-guard.yml  pr-quality.yml  protected-paths.yml  repo-verify.yml  secret-scan-deep.yml  secret-scan-fast.yml
apps/api/: __init__.py  main.py
apps/extension/: background.js  background.ts  chrome.d.ts  foreground.js  foreground.ts  manifest.json  options.html  options_script.js  options_script.ts  popup.html  popup_script.js  popup_script.ts  styles.css  stylez.css  tsconfig.json
apps/ingest/: __init__.py  main.py
apps/web/: app.js  app.ts  index.html  styles.css  tsconfig.build.json
docs/: adrs.md  apps.md  architecture.md  auth.md  code-style.md  design-system.md  infra.md  legend.md  onboarding.md  operations.md  packages.md  planning.md  python.md  templates.md  testing.md  workflow.md
docs/adrs/: sprint-001.md
docs/planning/: MASTER.md
docs/templates/: code-tldr.md
infra/cloudrun/: api.service.yaml  ingest.job.yaml
infra/docker/: docker-compose.yml  langfuse-compose.yml  otel-collector.yml  prometheus-rules.yml  prometheus.yml
python/common/: __init__.py  observability.py  runtime_auth.py  runtime_paths.py  runtime_store.py  runtime_time.py
python/evaluation/: langfuse_local_proof.py  runtime_eval.py  verify_mlflow_run.py
testing/: __init__.py
testing/accessibility/: browser-surfaces.spec.ts  runtime-a11y.md
testing/contract/: __init__.py  schema_assertions.py  test_runtime_contracts.py
testing/e2e/: degraded-mode.spec.ts  extension-side-panel.spec.ts  extension.helpers.ts  web-shell.spec.ts
testing/performance/: betterleaks-pre-push.local-proof.v1.json  browser-shell-baseline.local-proof.v1.json  runtime-baseline.local-proof.v1.json  runtime-baseline.md
testing/unit/: __init__.py  test_auth_adapter_scaffold.py  test_critical_path_probe.py  test_extension_build.py  test_ingest_main.py  test_install_hooks.py  test_js_run.py  test_langfuse_local_proof.py  test_phase_runner.py  test_pre_push.py  test_runtime_api.py  test_runtime_eval.py  test_runtime_observability.py  test_runtime_store.py  test_security_betterleaks.py  test_sync_environment.py  test_verify_browser.py  test_verify_commentary.py  test_verify_commit.py  test_verify_docs.py  test_verify_governance.py  test_verify_headers.py  test_verify_html_ship.py  test_verify_main_and_workflows.py  test_verify_pr_quality.py  test_verify_security.py  test_verify_shape.py  test_verify_suppressions.py  test_web_build.py
tools/: install_hooks.py  verify_browser.py
tools/dev/: js_run.py  phase_runner.py  pip_install.py  pre_push.py  sync_environment.py  typescript.py  web_static_server.py
tools/extension/: build.py
tools/hooks/: commit-msg  post-checkout  post-merge  post-rewrite  pre-commit  pre-push
tools/observability/: critical_path_probe.py
tools/ts/: stub.ts
(+38 files in other folders)
